[package]
name = "rust-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
serde = "1.0.145"
serde_derive = "1.0.145"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
